--- a/index.html
+++ b/index.html
@@ -12,10 +12,7 @@
     <h1>Remote 2</h1>
     <h2>Hello Zack</h2>
     <h3>Selamat Datang</h3>
-    <p>Hallo Mr. Zack, Selamat Datang di negara kami Indonesia. Similique voluptas asperiores numquam obcaecati
-        commodi
-        totam ad deleniti, dolore architecto at facilis neque quia, qui provident fuga possimus aliquid optio
-        perferendis!</p>
+    <p>Hallo Mr. Andrew, Selamat Datang di negara kami Indonesia. Anda sekarang berada di DKI Jakarta</p>
 </body>
 
 </html>
