--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <h3>Selamat Datang</h3>
     <p>Hallo Mr. Zack, Selamat Datang di negara kami Indonesia. Anda sekarang berada di DKI Jakarta. Senang menyambut
         anda</p>
+    <p>Senang juga berbisnis dengan anda</p>
 
 </body>
 
